@@ -146,6 +146,7 @@ version ?.??.?? (????-??-??):
     stores explicit suggested order of attributes in sender mail determination [mikenowak/chilan]
   - enhancement: indicator expired2 - my expired tickets for current logged user assigned as verifier [interduo]
   - enhancement: revolutionary layout changes: main menu and toolbar are always visible [chilan]
+  - enhancement: added back to top button always visible on right bottom of contents [chilan]
 
 version 1.11.23 (2018-03-21):
 
